hphp/hack/test/ifc/check/await_all_scope.php.exp
=== IFC analysis results for await_all_scope.php
File "await_all_scope.php", line 28, characters 3-13:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "await_all_scope.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "await_all_scope.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "await_all_scope.php", line 14, characters 3-17:
  Another program point contributing to the illegal flow
  File "await_all_scope.php", line 25, characters 5-30:
  Another program point contributing to the illegal flow
  File "await_all_scope.php", line 24, characters 3-12:
  Another program point contributing to the illegal flow
